tests/fsharp/typecheck/sigs/neg_byref_19.bsl

neg_byref_19.fs(2,38,2,46): typecheck error FS0412: A type instantiation involves a byref type. This is not permitted by the rules of Common IL.
