tests/fsharp/typecheck/sigs/neg_byref_19.fs
module Test
let f x = let mutable y = "hello" in box (&y);;

